--- a/ShirinkApp/ShirinkApp/ShirinkApp.csproj
+++ b/ShirinkApp/ShirinkApp/ShirinkApp.csproj
@@ -45,9 +45,11 @@
   <ItemGroup>
     <Compile Include="Connection.cs" />
     <Compile Include="ConnectionStringGenerator.cs" />
+    <Compile Include="DbInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Select.cs" />
+    <Compile Include="Utils\Log.cs" />
+    <Compile Include="Services.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
